[project]
name = "gassist-text"
version = "0.0.3"
authors = [
    { name="tronikos", email="tronikos@gmail.com" },
]
description = "A Python library for interacting with Google Assistant API via text"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "click>=2.0",
    "google-assistant-grpc==0.3.0",
    "google-auth<3,>=0.3.0",
    "protobuf<4,>=3.8.0",
    "requests<3,>=2.20.0",
]

[dependencies]

[project.urls]
"Homepage" = "https://github.com/tronikos/gassist_text"
"Bug Tracker" = "https://github.com/tronikos/gassist_text/issues"
