[project]
name = "gassist-text"
version = "0.0.7"
authors = [
    { name="tronikos", email="tronikos@gmail.com" },
]
description = "A Python library for interacting with Google Assistant API via text"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "beautifulsoup4>=4.1.2",
    "google-auth<3,>=0.3.0",
    "grpcio<2,>=1.48.0",
    "protobuf<5,>=3.20.0",
    "requests<3,>=2.20.0",
]

[project.urls]
"Homepage" = "https://github.com/tronikos/gassist_text"
"Bug Tracker" = "https://github.com/tronikos/gassist_text/issues"
