[metadata]
name = gassist-text
version = 0.0.3
description = A Python library for interacting with Google Assistant API via text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tronikos/gassist_text
author = tronikos
author_email = tronikos@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >= 3.7
install_requires =
  click>=2.0
  google-assistant-grpc==0.3.0
  google-auth<3,>=0.3.0
  protobuf<4,>=3.8.0
  requests<3,>=2.20.0
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[options.package_data]
gassist_text = py.typed

[flake8]
max-line-length = 88
ignore =
    E501,  # black: Line too long
    W503   # black: Line break before binary operator
